manifest/observability/monitoring/manifests/vminsert/vminsert.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vminsert
  namespace: monitoring
  labels:
    app.kubernetes.io/name: vminsert
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 8480
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: vminsert
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vminsert
  namespace: monitoring
  labels:
    app.kubernetes.io/name: vminsert
spec:
  replicas: 3
  serviceName: vminsert
  selector:
    matchLabels:
      app.kubernetes.io/name: vminsert
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vminsert
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - vminsert
                topologyKey: kubernetes.io/hostname
              weight: 100
      serviceAccountName: victoriametrics
      automountServiceAccountToken: true
      containers:
        - name: vminsert
          image: registry.cn-hangzhou.aliyuncs.com/devops-system/vminsert:v1.120.0-cluster
          imagePullPolicy: IfNotPresent
          args:
            - --replicationFactor=3
            - --maxLabelsPerTimeseries=45
            
            - --httpAuth.username=admin
            - --httpAuth.password=password

            - --storageNode=vmstorage-0.vmstorage.monitoring.svc.cluster.local:8400
            - --storageNode=vmstorage-1.vmstorage.monitoring.svc.cluster.local:8400
            - --storageNode=vmstorage-2.vmstorage.monitoring.svc.cluster.local:8400

            - --envflag.enable=true
            - --envflag.prefix=VM_
            - --loggerFormat=json
          ports:
            - name: http
              containerPort: 8480
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              cpu: 4
              memory: 8Gi
            requests:
              cpu: 4
              memory: 8Gi
