manifest/observability/monitoring/manifests/vminsert/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vminsert
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vminsert.kubeop.com
    secretName: kubeop.com-ssl
  rules:
  - host: vminsert.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: vminsert
              port:
                number: 8480
